WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242000
Fix block-aspect-ratio-037.html
https://bugs.webkit.org/show_bug.cgi?id=242000
Summary
Fix block-aspect-ratio-037.html
Rob Buis
Reported
2022-06-25 03:14:55 PDT
Fix block-aspect-ratio-037.html.
Attachments
Patch
(5.12 KB, patch)
2022-06-25 03:26 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(5.17 KB, patch)
2022-06-27 06:21 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-06-25 03:26:21 PDT
Created
attachment 460490
[details]
Patch
EWS Watchlist
Comment 2
2022-06-25 03:28:22 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Darin Adler
Comment 3
2022-06-26 16:54:26 PDT
Comment on
attachment 460490
[details]
Patch r=me Is the single regression test sufficient coverage for both code changes?
Rob Buis
Comment 4
2022-06-27 06:21:35 PDT
Created
attachment 460502
[details]
Patch
Rob Buis
Comment 5
2022-06-28 05:47:22 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 460490
[details]
> Patch > > r=me > > Is the single regression test sufficient coverage for both code changes?
The change in constrainLogicalHeightByMinMax is covered by aspect-ratio/grid-aspect-ratio-022.html.
EWS
Comment 6
2022-06-28 05:54:27 PDT
Committed
251908@main
(e97db329a49a): <
https://commits.webkit.org/251908@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460502
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-06-28 05:55:12 PDT
<
rdar://problem/96055491
>
Rob Buis
Comment 8
2022-06-29 06:58:35 PDT
***
Bug 231775
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug