Fix block-aspect-ratio-037.html https://bugs.webkit.org/show_bug.cgi?id=242000

Reviewed by Darin Adler.

Only transfer min/max block-sizes if inline-size is auto as specified here [1]:
"This transferred minimum is capped by any definite preferred or maximum size in the destination axis."
"This transferred maximum is floored by any definite preferred or minimum size in the destination axis as well as by the transferred minimum, if any."

[1] https://drafts.csswg.org/css-sizing-4/#aspect-ratio-size-transfers

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-037-expected.xht: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-037.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::constrainLogicalWidthInFragmentByMinMax const):
(WebCore::RenderBox::constrainLogicalHeightByMinMax const): transferred min size needs to be capped by max size.

Canonical link: https://commits.webkit.org/251908@main